<resources>
    <string name="app_name">MobileCinema</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Пользователя с таким паролем не найдено, попробуйте изменить пароль или логин</string>
    <string name="movie_catalog">Добро пожаловать в MovieCatalog</string>
    <string name="sign_up">Войти в аккаунт</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="cinema_background">cinema_background</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sing_in">Войти</string>
    <string name="sign_in_account">Вход в аккаунт</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="man">Мужчина</string>
    <string name="women">Женщина</string>
    <string name="person">Профиль</string>
    <string name="feed">Лента</string>
    <string name="movies">Фильмы</string>
    <string name="favorite">Избранное</string>
    <string name="preference_is_logged_in">shared_prefs_name</string>
    <string name="sing_up">Зарегестрироваться</string>
    <string name="close">close</string>
    <string name="birth_date">Дата рождения</string>
    <string name="film_image_description">Упс....Что то пошло не так</string>
    <string name="watch">Смотреть</string>
    <string name="rand_film">Случайный фильм</string>
    <string name="all_film">Все фильмы</string>
    <string name="my_favorite">Мне нравится</string>
    <string name="all">Все</string>
    <string name="gender">Пол</string>
    <string name="rating">Рейтинг</string>
    <string name="info">Информация</string>
    <string name="country">Страны</string>
    <string name="age">Возраст</string>
    <string name="time">Время</string>
    <string name="years">Год выхода</string>
    <string name="producer">Режисер</string>
    <string name="genres">Жанры</string>
    <string name="finance">Финансы</string>
    <string name="reviews">Отзывы</string>
    <string name="budget">Бюджет</string>
    <string name="feel_in_world">Сборы в мире</string>
    <string name="anonymous">Анонимный пользователь</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="evaluation">Оценка</string>
    <string name="anonymous_reviews">Анонимный отзыв</string>
    <string name="send">Отправить</string>
    <string name="empty">Здесь пока пусто</string>
    <string name="add_favorite">Добавьте любимые жанры и фильмы, чтобы вернуться к ним позже</string>
    <string name="find_film">Найти фильм для себя</string>
    <string name="favorite_genres">Любимые жанры</string>
    <string name="favorite_films">Любимые фильмы</string>
    <string name="favorites">Избранное</string>
    <string name="login_error_null">логин не может быть пустым</string>
    <string name="password_error_null">пароль не может быть пустым</string>
    <string name="and">и</string>
    <string name="strange_request_error">неопознанная ошибка</string>
    <string name="name_validation_error">Имя %1$s! невалидно, в имени должны быть только буквы или числа на латинице</string>
    <string name="invalid_login">Username  is already taken.</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="login_empty">логин не может быть пустым</string>
    <string name="date_empty">дата пустая</string>
    <string name="name_empty">пустое имя</string>
    <string name="passwor_validate_error">в пароле должны быть только буквы или числа на латинице</string>
    <string name="password_small">пароль дожен быть более чем 6 символов</string>
    <string name="password_not_same">Пароли не совпадают</string>
    <string name="api_key">dc768ecc-f877-4755-98dd-5f95dd30e835</string>
    <string name="hours">ч</string>
    <string name="minutes">м</string>
    <string name="not_time">неизвестно</string>
    <string name="review_alreadyAdded">Вы уже добавили отзыв</string>
    <string name="change_review">Изменить отзыв</string>
    <string name="review_text">Текст отзыва</string>
    <string name="my_friends">Мои друзья</string>
    <string name="y_friends">Мои друзья</string>
    <string name="good_morning">Доброе утро</string>
    <string name="good_day">Добрый день</string>
    <string name="good_evening">Добрый вечер</string>
    <string name="good_night">Доброй ночи</string>
</resources>