<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootSignUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cinema_background"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sign_up_background_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.39"
        app:cardPreventCornerOverlap="false"
        app:shapeAppearanceOverlay="@style/RoundedBottomCorners"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:scaleType="matrix"
            android:src="@drawable/background" />
    </com.google.android.material.card.MaterialCardView>


    <EditText
        android:id="@+id/loginSignUp"
        style="@style/EditTextLoginMenu"
        android:autofillHints="username"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_background_image"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/emailSignUp"
        style="@style/EditTextLoginMenu"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginSignUp"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nameSignUp"
        style="@style/EditTextLoginMenu"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailSignUp"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordSignUp"
        style="@style/EditTextLoginMenu"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameSignUp"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirmPasswordSignUp"
        style="@style/EditTextLoginMenu"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordSignUp"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/dateSignUp"
        style="@style/EditTextLoginMenu"
        android:autofillHints="creditCardExpirationDate"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordSignUp"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/regButton"
        style="@style/ButtonLoginMenu"
        android:enabled="false"
        android:hint="@string/sing_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout5"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateSignUp"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/womenButtonSignUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonLoginMenu"
            android:background="@drawable/left_button_selector"
            android:layout_marginEnd="0dp"
            android:hint="@string/man" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menButtonSignUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardPreventCornerOverlap="false"
            android:background="@drawable/right_button_selector"

            style="@style/ButtonLoginMenu"
            android:layout_marginStart="0dp"
            app:shapeAppearanceOverlay="@style/RoundedEndCorners"
            android:hint="@string/women" />
    </LinearLayout>



        <Button
            android:id="@+id/singUpBackButton"
            style="@style/ButtonBackLoginMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/button" />

    <TextView
        android:text="@string/sign_in_account"
        style="@style/HelpfulScreen"
        app:layout_constraintBottom_toBottomOf="@+id/singUpBackButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/singUpBackButton"
        app:layout_constraintTop_toTopOf="@+id/singUpBackButton" />


    <ImageView
        android:id="@+id/calendarCloseSignUp"
        style="@style/IconLoginMenu"
        android:src="@drawable/title_calendar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/dateSignUp"
        app:layout_constraintEnd_toEndOf="@+id/dateSignUp"
        app:layout_constraintStart_toStartOf="@+id/dateSignUp"
        app:layout_constraintTop_toTopOf="@+id/dateSignUp" />

    <ImageView
        android:id="@+id/loginDeleteSignUp"
        android:src="@drawable/title_close"
        style="@style/IconLoginMenu"
        app:layout_constraintBottom_toBottomOf="@+id/loginSignUp"
        app:layout_constraintEnd_toEndOf="@+id/loginSignUp"
        app:layout_constraintStart_toStartOf="@+id/loginSignUp"
        app:layout_constraintTop_toTopOf="@+id/loginSignUp" />

    <ImageView
        style="@style/IconLoginMenu"
        android:id="@+id/emailCloseSignUp"
        android:src="@drawable/title_close"
        app:layout_constraintBottom_toBottomOf="@+id/emailSignUp"
        app:layout_constraintEnd_toEndOf="@+id/emailSignUp"
        app:layout_constraintStart_toStartOf="@+id/emailSignUp"
        app:layout_constraintTop_toTopOf="@+id/emailSignUp" />

    <ImageView
        style="@style/IconLoginMenu"
        android:id="@+id/nameCloseSignUp"
        android:src="@drawable/title_close"
        app:layout_constraintBottom_toBottomOf="@+id/nameSignUp"
        app:layout_constraintEnd_toEndOf="@+id/nameSignUp"
        app:layout_constraintStart_toStartOf="@+id/nameSignUp"
        app:layout_constraintTop_toTopOf="@+id/nameSignUp"/>

    <ImageView
        style="@style/IconLoginMenu"

        android:id="@+id/passwordWatchSignUp"
        android:src="@drawable/login_selector_look_img"
        app:layout_constraintBottom_toBottomOf="@+id/passwordSignUp"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUp"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUp"
        app:layout_constraintTop_toTopOf="@+id/passwordSignUp" />

    <ImageView
        style="@style/IconLoginMenu"
        android:id="@+id/confirmPasswordWatchSignUp"
        android:src="@drawable/login_selector_look_img"
        app:layout_constraintBottom_toBottomOf="@+id/confirmPasswordSignUp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordSignUp"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordSignUp"
        app:layout_constraintTop_toTopOf="@+id/confirmPasswordSignUp" />



</androidx.constraintlayout.widget.ConstraintLayout>